--- a/src/Components/Component/Buttons/Button.css
+++ b/src/Components/Component/Buttons/Button.css
@@ -21,13 +21,9 @@
     color: #fff;
 }
 
-/* @media only screen and (min-width:767px) and (max-width:960px){
+@media only screen and (max-width:415px){
     .button {
-        border: 3px solid #000 !important;
-        padding: 5px 28px !important;
-        font-size: 15px !important;
-        font-weight: 600 !important;
-        letter-spacing: 2px;
-        margin: 0 35px;
+        font-size: 10px;
+        margin: 0 15px !important;
     }
-} */
+}
