--- a/src/Components/Carrousel/Carrousel.css
+++ b/src/Components/Carrousel/Carrousel.css
@@ -150,29 +150,12 @@
     height: 10%;
 }
 
-/* @media only screen and (max-width:1300px){
-    .carrousel__container {
-        height: 90vh;
+@media only screen and (max-width:415px){
+    .description {
+        width: 85%;
+        min-width: 65%;
     }
-
-    .title>h2 {
-        margin: 2% 0;
-    }
-
-    .button__container {
-        margin-top:2%;
-    }
-
-    .carrousel{
-        width: 100%;
-        margin-bottom: 20px;
-    }
-    
-    .slide__description{
-        margin: 0;
-    }
-
     .slide__description>p{
-        
+        font-size: 14px;
     }
-} */
+}
