--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -190,12 +190,17 @@
 
     .gmail {
         width: 30px;
-        /* display: flex;
-        align-items: center; */
     }
 
     .design__by {
         padding-top: 0px;
         margin-bottom: 15px;
+    }
+}
+
+@media only screen and (max-width:415px){
+    .footer__info {
+        width: 90%;
+        padding-left: 20px;
     }
 }
