--- a/src/Components/About/AboutPage/AboutComponents/ContainerDynamic/ContainerDynamic.css
+++ b/src/Components/About/AboutPage/AboutComponents/ContainerDynamic/ContainerDynamic.css
@@ -93,3 +93,36 @@
         justify-items: center;
     }
 }
+
+@media only screen and (max-width:300px) {
+    .main__container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: 65px;
+        max-height: 100vh;
+        /* margin-bottom: 130px; */
+        /* overflow: hidden; */
+    }
+    
+    .container__outlet {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        /* top: 0; */
+    }
+
+    .nav-about{
+        font-size: 12px;
+    }
+
+    .button-cv {
+        margin: 0;
+    }
+}
