--- a/src/Components/Component/AllProjects/AllProjects.css
+++ b/src/Components/Component/AllProjects/AllProjects.css
@@ -69,5 +69,25 @@
 }
 
 @media only screen and (max-width:670px){
+    .projects__container {
+        display: grid;
+        grid-template-columns: repeat(2, minmax(140px, 1fr));
+        grid-template-rows: repeat(2, .65fr);
+    }
 
+    .project:nth-child(5){
+        display: none;
+    }
+
+    .project:nth-child(6){
+        display: none;
+    }
+}
+
+@media only screen and (max-width:300px){
+    .projects__container {
+        display: grid;
+        grid-template-columns: repeat(2, minmax(120px, 1fr));
+        grid-template-rows: repeat(2, 125px);
+    }
 }
