--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -124,19 +124,39 @@
     }
 }
 
-/* @media only screen and (max-width:901px) and (max-width:960px){
-    .container {
-        width: 80% !important;
+@media only screen and (min-width:901px) and (max-width:1000px){
+    .footer__container{
+        height: 100vh;
     }
-} */
+
+    .fondo-footer {
+        top: 50px;
+        width: 200%;
+    }
+
+     .container{
+        width: 100% !important;
+    }
+
+    .footer__info{
+        width: 40%;
+        padding: 0;
+    }
+
+    .footer__container-form{
+        width: 60%;
+    }
+}
 
 @media only screen and (max-width:900px) {
-    .footer__container{
+
+    .footer__container {
         height: 103vh;
     }
 
     .container {
         width: 100%;
+        height: 90%;
     }
 
     .fondo-footer {
@@ -144,13 +164,12 @@
         object-fit: cover;
         left: 0;
         bottom: 0;
-        width: 100%;
+        width: 180%;
         height: 100vh;
         z-index: -5;
     }
 
     .footer__name-isaias {
-        /* white-space: wrap; */
         margin: 0 !important;
     }
 
@@ -159,7 +178,8 @@
     }
 
     .footer__info {
-        width: 70%;
+        width: 80%;
+        gap: 15px;
     }
 
     .footer__info>a {
@@ -198,9 +218,27 @@
     }
 }
 
-@media only screen and (max-width:415px){
+@media only screen and (min-width:750px) and (max-width:900px){
+
+}
+
+@media only screen and (max-width:415px) {
     .footer__info {
         width: 90%;
         padding-left: 20px;
+    }
+}
+
+@media only screen and (max-width:300px) {
+    .footer__info {
+        padding-left: 10px;
+    }
+
+    .container {
+        width: 90%;
+    }
+
+    .footer__form {
+        text-align: center;
     }
 }
