--- a/src/Components/Info/Info.css
+++ b/src/Components/Info/Info.css
@@ -44,3 +44,9 @@
         font-size: 20px;
     }
 }
+
+@media only screen and (max-width:300px){
+    .Info>h1{
+        font-size: 17px;
+    }
+}
