--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -4,10 +4,12 @@
     background-color: #fff;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    gap: 20px;/*en px*/
+    gap: 20px;
+    /*en px*/
     align-items: center;
     justify-content: center;
 }
+
 /*ver todo GRID de DALTO, para dejar el mismo espacio entre las celdas y
  contra los bordes del viewport*/
 .services {
@@ -17,18 +19,19 @@
     color: #000;
     margin: 0 40px;
 }
-.services-icon{
+
+.services-icon {
     margin-bottom: 10px;
 }
 
-.icon-tabler-devices{
+.icon-tabler-devices {
     width: 60px !important;
     height: 60px !important;
     font-size: 60px;
     font-weight: 700;
 }
 
-.services>h2{
+.services>h2 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
     font-size: 20px;
@@ -43,18 +46,19 @@
     color: #a7a7a7;
 }
 
-@media only screen and (max-width:960px){
-    .services__container{
+@media only screen and (max-width:960px) {
+    .services__container {
         height: 90vh;
         margin: 30px auto;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        align-items:center;
+        align-items: center;
         width: 80%;
         padding: 20px 0 20px 0;
     }
-    .services{
+
+    .services {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -63,8 +67,65 @@
     }
 }
 
-@media only screen and (max-width:415px){
-    .services__container{
+@media only screen and (min-width:750px) and (max-width:959px) {
+    .services__container {
+        margin: 0 auto;
+        height: 60vh;
+    }
+
+    .services>h2 {
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 700;
+        font-size: 20px;
+        margin-bottom: 5px;
+        letter-spacing: 3px;
+    }
+
+    .services>p {
+        font-family: 'Mulish', sans-serif;
+        font-size: 17px;
+        line-height: 1.5;
+        color: #a7a7a7;
+    }
+}
+
+@media only screen and (max-width:415px) {
+    .services__container {
         width: 95%;
+    }
+}
+
+@media only screen and (max-width:300px) {
+    .services__container {
+        margin: 0;
+        height: 100vh;
+
+    }
+
+    #imagen1 {
+        width: 40px !important;
+        height: 40px !important;
+    }
+
+    .icon-tabler-devices {
+        width: 40px !important;
+        height: 40px !important;
+        font-size: 40px;
+        font-weight: 700;
+    }
+
+    .services>h2 {
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 700;
+        font-size: 16px;
+        margin-bottom: 5px;
+        letter-spacing: 3px;
+    }
+
+    .services>p {
+        font-family: 'Mulish', sans-serif;
+        font-size: 14px;
+        line-height: 1.5;
+        color: #a7a7a7;
     }
 }
