--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -114,6 +114,19 @@
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.37);
     color: #fff;
 }
+
+@media only screen and (min-width:1280px) and (min-height:949px) {
+    .About__container {
+        height: 60vh;
+    }
+}
+
+@media only screen and (min-width:1000px) and (max-width:1279px) {
+    .About__container {
+        height: 70vh;
+    }
+}
+
 @media only screen and (max-width:960px) {
     .About__container {
         flex-direction: column;
@@ -132,7 +145,7 @@
         width: 100%;
         height: 100%;
     }
-    
+
     .isaias__img {
         object-fit: contain;
     }
@@ -149,20 +162,20 @@
     }
 }
 
-@media only screen and (min-width:750px) and (max-width:959px){
-    .About__container{
-        height: 45vh;
+@media only screen and (min-width:750px) and (max-width:959px) {
+    .About__container {
+        height: 110vh;
         flex-direction: row;
         padding: 0;
     }
 
-    .Aboute__img{
+    .Aboute__img {
         align-self: flex-end;
-        overflow:inherit;
+        overflow: inherit;
         height: 100%;
     }
 
-    .About__desc{
+    .About__desc {
         padding-right: 55px;
     }
 
@@ -173,24 +186,62 @@
     }
 }
 
-@media only screen and (max-width:300px){
-    .About__desc{
+/* @media only screen and (max-width:500px){
+    .About__container{
+        height: 100vh;
+    }
+} */
+
+@media only screen and (min-width:601px) and (max-width:749px) {
+    .About__container {
+        height: 190vh;
+    }
+
+    .button__container {
+        margin-top: 15px !important;
+    }
+}
+
+@media only screen and (min-width:416px) and (max-width:600px) {
+    .About__container {
+        height: 200vh;
+    }
+
+    .button__container {
+        margin-top: 15px !important;
+    }
+}
+
+@media only screen and (min-width:331px) and (max-width:381px) {
+    .About__container {
+        height: 110vh;
+    }
+}
+
+@media only screen and (min-width:301px) and (max-width:330px) {
+    .About__container {
+        height: 170vh;
+    }
+}
+
+@media only screen and (max-width:300px) {
+    .About__desc {
         margin: 0 auto;
     }
 
-    .About__container{
+    .About__container {
         height: 110vh;
     }
 
-    .icon__container{
+    .icon__container {
         display: grid;
-        grid-template-columns: repeat(2,70px);
-        grid-template-rows: repeat(2,60px);
+        grid-template-columns: repeat(2, 70px);
+        grid-template-rows: repeat(2, 60px);
         gap: 10px;
         margin-bottom: 10px;
     }
 
-    .Aboute__img{
+    .Aboute__img {
         min-height: 150px !important;
     }
 
