--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -151,7 +151,7 @@
 @media only screen and (max-width:900px) {
 
     .footer__container {
-        height: 103vh;
+        height: 180vh;
     }
 
     .container {
@@ -165,7 +165,7 @@
         left: 0;
         bottom: 0;
         width: 180%;
-        height: 100vh;
+        height: 180vh;
         z-index: -5;
     }
 
@@ -218,14 +218,57 @@
     }
 }
 
-@media only screen and (min-width:750px) and (max-width:900px){
+@media only screen and (min-width:1000px) {
+    .container{
+        width: 90%;
+    }
+}
 
+@media only screen and (min-width:601px) and (max-width:749px) {
+    .footer__container{
+        height: 180vh;
+    }
+    
+    .fondo-footer {
+        height: 180vh;
+    }
+}
+
+@media only screen and (min-width:416px) and (max-width:600px) {
+    .footer__container{
+        height: 200vh;
+    }
+    
+    .fondo-footer {
+        height: 200vh;
+    }
 }
 
 @media only screen and (max-width:415px) {
+    .footer__container{
+        height: 105vh;
+    }
+
     .footer__info {
         width: 90%;
         padding-left: 20px;
+    }
+
+    .fondo-footer {
+        object-fit: contain;
+        height: 105vh;
+        width: 350%;
+        left: -50%;
+    }
+}
+
+@media only screen and (min-width:301px) and (max-width:330px){
+    .footer__container{
+        height: 140vh;
+    }
+    
+    .fondo-footer {
+        height: 140vh;
     }
 }
 
