--- a/src/Components/MotivationalPhrase/MotivationalPhrase.css
+++ b/src/Components/MotivationalPhrase/MotivationalPhrase.css
@@ -36,27 +36,38 @@
     letter-spacing: 2.5px;
 }
 
-@media only screen and (min-width:1280px){
-    .Motive__container{
+@media only screen and (min-width:2300px) {
+    .Motive>h2 {
+        font-size: 45px;
+    }
+
+    .Motive>p {
+        font-size: 30px;
+        padding-right: 15px;
+    }
+}
+
+@media only screen and (min-width:1280px) {
+    .Motive__container {
         height: 35vh;
     }
 }
 
-@media only screen and (min-width:1000px) and (max-width:1279px){
-    .Motive__container{
+@media only screen and (min-width:1000px) and (max-width:1279px) {
+    .Motive__container {
         height: 40vh;
     }
 }
 
-@media only screen and (max-width:550px){
+@media only screen and (max-width:550px) {
     .Motive__container {
         margin: 20px 0;
     }
 }
 
 @media only screen and (min-width:767px) and (max-width:960px) {
-    .Motive__container{
-        height: 80vh;
+    .Motive__container {
+        height: 35vh;
     }
 
     .Motive {
@@ -67,25 +78,25 @@
         font-size: 22px;
     }
 
-    .Motive>p{
+    .Motive>p {
         font-size: 17px;
         padding-right: 15px;
     }
 }
 
 @media only screen and (min-width:601px) and (max-width:749px) {
-    .Motive__container{
+    .Motive__container {
         height: 90vh;
     }
 }
 
 @media only screen and (min-width:416px) and (max-width:600px) {
-    .Motive__container{
+    .Motive__container {
         height: 110vh;
     }
 }
 
-@media only screen and (max-width:415px){
+@media only screen and (max-width:415px) {
     .Motive {
         width: 80%;
     }
@@ -95,20 +106,20 @@
     }
 }
 
-@media only screen and (min-width:331px) and (max-width:381px){
-    .Motive__container{
+@media only screen and (min-width:331px) and (max-width:381px) {
+    .Motive__container {
         height: 60vh;
     }
 }
 
-@media only screen and (min-width:301px) and (max-width:330px){
-    .Motive__container{
+@media only screen and (min-width:301px) and (max-width:330px) {
+    .Motive__container {
         height: 90vh;
     }
 }
 
-@media only screen and (max-width:300px){
-    .Motive__container{
+@media only screen and (max-width:300px) {
+    .Motive__container {
         height: 60vh;
     }
 
