--- a/src/Components/Carrousel/Carrousel.css
+++ b/src/Components/Carrousel/Carrousel.css
@@ -150,9 +150,33 @@
     height: 10%;
 }
 
+@media only screen and (min-width:2300px) {
+    .title {
+        margin-bottom: 80px;
+    }
+
+    .title>h2 {
+        font-size: 50px;
+    }
+
+    .slide__description>h3 {
+        font-size: 40px;
+        padding-top: 20px;
+        padding-bottom: 21px;
+    }
+
+    .slide__description>p {
+        font-size: 28px;
+    }
+
+    .description {
+        height: 230px;
+    }
+}
+
 @media only screen and (min-width:750px) and (max-width:960px) {
     .carrousel__container {
-        height: 125vh;
+        height: 85vh;
     }
 
     .slide__container {
@@ -164,7 +188,7 @@
     }
 }
 
-@media only screen and (min-width:416px) and (max-width:749px){
+@media only screen and (min-width:416px) and (max-width:749px) {
     .slide__container {
         width: 90%;
     }
@@ -175,22 +199,22 @@
 }
 
 @media only screen and (min-width:601px) and (max-width:749px) {
-    .carrousel__container{
+    .carrousel__container {
         height: 120vh;
     }
 
-    .description{
+    .description {
         height: 160px;
         width: 85%;
     }
 }
 
 @media only screen and (min-width:416px) and (max-width:600px) {
-    .carrousel__container{
+    .carrousel__container {
         height: 150vh;
     }
 
-    .description{
+    .description {
         height: 170px;
         width: 90%;
     }
@@ -219,8 +243,8 @@
     }
 }
 
-@media only screen and (min-width:301px) and (max-width:330px){
-    .carrousel__container{
+@media only screen and (min-width:301px) and (max-width:330px) {
+    .carrousel__container {
         height: 100vh;
     }
 }
