--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -80,6 +80,8 @@
     margin: 0 auto;
 }
 
+
+
 .sns-links {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -100,6 +102,17 @@
     transition: color .15s ease-in-out;
 }
 
+.gmail__link {
+    display: flex;
+    align-items: flex-end;
+}
+
+.gmail {
+    display: flex !important;
+    align-items: flex-end !important;
+    position: relative;
+}
+
 .gmail:hover {
     fill: #e82dcf
 }
@@ -108,6 +121,57 @@
     font-size: 13.5px;
     color: #a7a7a7;
     padding-top: 20px;
+}
+
+@media only screen and (min-width:2300px) {
+    .footer__name-isaias {
+        font-size: 70px;
+    }
+
+    .footer__info>a {
+        font-size: 40px;
+        margin-bottom: 100px;
+    }
+
+    .footer__contact>h3,
+    .footer__contact>p {
+        font-size: 30px;
+    }
+
+    .footer__sns {
+        width: 30%;
+        height: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 50px;
+        /* margin-top: 10px; */
+    }
+
+    .sns-links {
+        gap: 20px;
+    }
+
+    .sns-icon {
+        height: 100px;
+        font-size: 80px;
+        color: #000;
+    }
+
+    .footer__sns>a {
+        display: flex;
+        align-items: flex-end;
+    }
+
+    .gmail {
+        height: 90px !important;
+        width: 90px !important;
+    }
+
+    .design__by {
+        font-size: 30px;
+        padding-top: 40px;
+    }
 }
 
 @media only screen and (max-width:1300px) {
@@ -124,8 +188,8 @@
     }
 }
 
-@media only screen and (min-width:901px) and (max-width:1000px){
-    .footer__container{
+@media only screen and (min-width:901px) and (max-width:1000px) {
+    .footer__container {
         height: 100vh;
     }
 
@@ -134,16 +198,16 @@
         width: 200%;
     }
 
-     .container{
+    .container {
         width: 100% !important;
     }
 
-    .footer__info{
+    .footer__info {
         width: 40%;
         padding: 0;
     }
 
-    .footer__container-form{
+    .footer__container-form {
         width: 60%;
     }
 }
@@ -151,7 +215,7 @@
 @media only screen and (max-width:900px) {
 
     .footer__container {
-        height: 180vh;
+        height: 100vh;
     }
 
     .container {
@@ -219,33 +283,33 @@
 }
 
 @media only screen and (min-width:1000px) {
-    .container{
+    .container {
         width: 90%;
     }
 }
 
 @media only screen and (min-width:601px) and (max-width:749px) {
-    .footer__container{
+    .footer__container {
         height: 180vh;
     }
-    
+
     .fondo-footer {
         height: 180vh;
     }
 }
 
 @media only screen and (min-width:416px) and (max-width:600px) {
-    .footer__container{
+    .footer__container {
         height: 200vh;
     }
-    
+
     .fondo-footer {
         height: 200vh;
     }
 }
 
 @media only screen and (max-width:415px) {
-    .footer__container{
+    .footer__container {
         height: 105vh;
     }
 
@@ -262,11 +326,11 @@
     }
 }
 
-@media only screen and (min-width:301px) and (max-width:330px){
-    .footer__container{
+@media only screen and (min-width:301px) and (max-width:330px) {
+    .footer__container {
         height: 140vh;
     }
-    
+
     .fondo-footer {
         height: 140vh;
     }
