--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -106,6 +106,11 @@
 }
 
 @media only screen and (min-width:1280px){
+    .NavBar {
+        height: 100px;
+        align-items: center;
+    }
+
     .logo {
         font-size: 2.5rem;
     }
@@ -116,6 +121,20 @@
 
     .scrolling__menu>a {
         font-size: 1.3rem;
+    }
+}
+
+@media only screen and (min-width:2300px){
+    .logo {
+        font-size: 3.5rem;
+    }
+
+    .NavBar__menu>a {
+        font-size: 2rem;
+    }
+
+    .scrolling__menu>a {
+        font-size: 2.3rem;
     }
 }
 
