--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -82,7 +82,7 @@
 
 @media only screen and (min-width:1280px){
     .services__container {
-        height: 35vh;
+        height: 40vh;
     }
 }
 
@@ -113,7 +113,7 @@
     }
 }
 
-@media only screen and (min-width:750px) and (max-width:959px) {
+@media only screen and (min-width:750px) and (max-width:960px) {
     .services__container {
         margin: 0 auto;
         height: 70vh;
@@ -135,7 +135,7 @@
     }
 }
 
-@media only screen and (min-width:601px) and (max-width:749px) {
+@media only screen and (min-width:601px) and (max-width:749px) and (max-height: 1000px) {
     .services__container {
         height: 150vh;
     }
