--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -183,6 +183,12 @@
     }
 }
 
+@media only screen and (min-width:750px) and (max-width:960px) and (min-height:300px) and (max-height:500px){
+    .About__container {
+        height: 110vh !important;
+    }
+}
+
 @media only screen and (min-width:750px) and (max-width:959px) {
     .About__container {
         height: 45vh;
