--- a/src/Components/Carrousel/Carrousel.css
+++ b/src/Components/Carrousel/Carrousel.css
@@ -174,6 +174,18 @@
     }
 }
 
+@media only screen and (min-width:750px) and (max-width:960px) and (min-height:400px) and (max-height:500px){
+    .carrousel__container {
+        height: 100vh !important;
+    }
+}
+
+@media only screen and (min-width:750px) and (max-width:960px) and (min-height:300px) and (max-height:399px){
+    .carrousel__container {
+        height: 120vh !important;
+    }
+}
+
 @media only screen and (min-width:750px) and (max-width:960px) {
     .carrousel__container {
         height: 85vh;
