--- a/src/Components/Component/FormContact/FormContact.css
+++ b/src/Components/Component/FormContact/FormContact.css
@@ -366,7 +366,7 @@
     }
 }
 
-@media only screen and (min-width:1280px) {
+@media only screen and (min-width:1280px) and (min-height:900px){
     .footer__container-form {
         height: 65%;
         justify-content: center;
