--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -288,6 +288,18 @@
     }
 }
 
+@media only screen and (min-width:750px) and (max-width:960px) and (min-height:400px) and (max-height:500px){
+    .footer__container {
+        height: 150vh !important;
+    }
+}
+
+@media only screen and (min-width:750px) and (max-width:960px) and (min-height:300px) and (max-height:399px){
+    .footer__container {
+        height: 200vh !important;
+    }
+}
+
 @media only screen and (min-width:601px) and (max-width:749px) {
     .footer__container {
         height: 180vh;
