--- a/src/Components/MotivationalPhrase/MotivationalPhrase.css
+++ b/src/Components/MotivationalPhrase/MotivationalPhrase.css
@@ -65,6 +65,12 @@
     }
 }
 
+@media only screen and (min-width:750px) and (max-width:960px) and (min-height:300px) and (max-height:500px){
+    .Motive__container {
+        height: 80vh !important;
+    }
+}
+
 @media only screen and (min-width:767px) and (max-width:960px) {
     .Motive__container {
         height: 35vh;
