--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -113,6 +113,12 @@
     }
 }
 
+@media only screen and (min-width:750px) and (max-width:960px) and (min-height:300px) and (max-height:500px){
+    .services__container {
+        height: 150vh !important;
+    }
+}
+
 @media only screen and (min-width:750px) and (max-width:960px) {
     .services__container {
         margin: 0 auto;
